[package]
name = "kimi-fann-core"
version = "0.1.0"
edition = "2021"
authors = ["rUv <https://github.com/ruvnet>"]
description = "Kimi-K2 micro-expert implementation using ruv-FANN with WASM support"
repository = "https://github.com/ruvnet/Synaptic-Mesh"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/ruvnet/Synaptic-Mesh"
documentation = "https://docs.rs/kimi-fann-core"
readme = "README.md"
keywords = ["neural", "kimi", "expert", "wasm", "ai"]
categories = ["science", "wasm", "algorithms"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core neural network dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"

# Math and arrays
ndarray = { version = "0.15", features = ["serde"] }
num-traits = "0.2"
rand = { version = "0.8", features = ["small_rng"] }
rand_distr = "0.4"

# Memory management and performance
lru = "0.12"
dashmap = { version = "6.0", features = ["serde"] }
tokio = { version = "1.0", features = ["rt", "sync", "time"], optional = true }

# Compression for expert storage
lz4_flex = "0.11"
flate2 = "1.0"

# WASM support
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console", "Performance", "Window", "Worker", "MessageChannel", 
    "MessagePort", "BroadcastChannel", "MessageEvent"
] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"

# Published dependencies
synaptic-neural-wasm = "0.1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"
tokio-test = "0.4"
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["std", "parallel", "compression"]
std = ["tokio"]
parallel = ["tokio"]
compression = []
simd = []
no-std = []

# WASM-specific optimizations
wasm-opt = []

[package.metadata.wasm-pack.profile.release]
wee-alloc = false

[package.metadata.wasm-pack.profile.dev]
debug-info = true